# Shooter-AP93UT

./: CMakeLists.txt  MyMainWindow.cpp  MyMainWindow.h  MyMenu.cpp  MyMenu.h  MySetting.cpp  MySetting.h  MyTutorial.cpp  MyTutorial.h  main.cpp
Sources/: MyMainWindow.cpp  MyMenu.cpp  MyMenu.h  MySetting.cpp  MySetting.h  MyTutorial.cpp  MyTutorial.h
Sources/Headers/: MyAi.h  MyEnd.h  MyMainWindow.h  MyMenu.h  MyName.h  MyPause.h  MySetting.h  MyTutorial.h  MyaiTab.h  MyaudioTab.h  MymodeTab.h  MythmTab.h  Resources.h  SettingData.h
Sources/Headers/Game/: MyAlien.h  MyAsteroid.h  MyBullet.h  MyGame.h  MyLife.h  MyMagic.h  MyShield.h  MyShip.h  MyShipShield.h  MyStar.h
Sources/Headers/Game Objects/: MyAlien.h  MyAlienBoss.h  MyAsteroid.h  MyBullet.h  MyExplosion.h  MyGravityField.h  MyLife.h  MyMagic.h  MyShield.h  MyShip.h  MyShipShield.h  MyStar.h
Sources/Headers/Settings/: MyaudioTab.h
Sources/Headers/Widgets/: MyGame.h  MyPause.h  MySetting.h
Sources/Source Files/: MyAi.cpp  MyEnd.cpp  MyMainWindow.cpp  MyMenu.cpp  MyName.cpp  MyPause.cpp  MySetting.cpp  MyTutorial.cpp  MyaiTab.cpp  MyaudioTab.cpp  MymodeTab.cpp  MythmTab.cpp  Resources.cpp
Sources/Source Files/Game/: MyAsteroid.cpp  MyBullet.cpp  MyGame.cpp  MyLife.cpp  MyMagic.cpp  MyShield.cpp  MyShip.cpp  MyShipShield.cpp  MyStar.cpp
Sources/Source Files/Game Objects/: MyAlien.cpp  MyAlienBoss.cpp  MyAsteroid.cpp  MyBullet.cpp  MyExplosion.cpp  MyGravityField.cpp  MyLife.cpp  MyMagic.cpp  MyShield.cpp  MyShip.cpp  MyShipShield.cpp  MyStar.cpp
Sources/Source Files/Settings/: MyaiTab.cpp  MyaudioTab.cpp  MymodeTab.cpp  MythmTab.cpp
Sources/Source Files/Widgets/: MyEnd.cpp  MyGame.cpp  MyMenu.cpp  MyName.cpp  MyPause.cpp  MySetting.cpp  MyTutorial.cpp
